--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         </nav>
     </header>
         <main>
-            <div id="item1"></div>
-            <div id="item1"></div>
-            <div id="item1"></div>
-            <div id="item1"></div>
-            <div id="item1"></div>
-            <div id="item1"></div>
-            <div id="item1"></div>
-            <div id="item1"></div>
-            <div id="item1"></div>
-            <div id="item1"></div>
-            <div id="item1"></div>
+            <div id="item1">1</div>
+            <div id="item2">2</div>
+            <div id="item2">3</div>
+            <div id="item2">4</div>
+            <div id="item2">5</div>
+            <div id="item2">6</div>
+            <div id="item2">7</div>
+            <div id="item2">8</div>
+            <div id="item2">9</div>
+            <div id="item2">10</div>
+            <div id="item2">11</div>
         </main>
     <footer>
         <p>© 2025 </p>
