--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><img src="feral-hog-viral-hog.gif" alt="loggan" height="200px">
+    <header>
+        <div id="loggaarean">
+            <img src="wild-boar-animal-clipart-xl.png" alt="loggan" height="200px" id="loggan">
+            <div id="loggatxt"><h1>Wild Hogs</h1></div>
+        </div>
         <nav>    
-            <a href="about.html">About</a>
-            <a href="services.html">Merch</a>
-            <a href="contact.html">Contact</a>
+            <a href="merch.html">Merch</a>
+            <a href="kontakt.html">Kontakt</a>
         </nav>
     </header>
         <main>
