--- a/kontakt.html
+++ b/kontakt.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <h1>Kontakta oss</h1>
-    <nav>
-        <a href="index.html">home</a>
-    </nav>
+    <header>
+        <h1 id="stortxt">Kontakta oss</h1>
+        <nav>
+            <a href="index.html">hem</a>
+            <a href="merch.html">Merch</a>
+        </nav>
+    </header>
+    <main>
+        <p>Du kan kontakta oss via email på wildhogs_email.com</p>
+
     
 </body>
 </html>
