--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </nav>
     </header>
         <main>
-            <div id="item1">1</div>
-            <div id="item1">2</div>
-            <div id="item1">3</div>
-            <div id="item1">4</div>
-            <div id="item1">5</div>
+            <div id="item1">vilka vi är....</div>
+            <div id="item1" href="merch.html">lite om vår merch...</div>
+            <div id="item1" href="kontakt.html">våra medlemmar...</div>
+            <div id="item1">vi är kockar...</div>
+            <div id="item1" href="kontakt.html">små kontakt</div>
             <div id="item1">6</div>
             <div id="item1">7</div>
             <div id="item1">8</div>
