--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
     </header>
         <main>
             <div id="item1">vilka vi är....</div>
-            <div id="item1" href="merch.html">lite om vår merch...</div>
-            <div id="item1" href="kontakt.html">våra medlemmar...</div>
+            <a href="merch.html">
+            <div id="item1" href="merch.html" target="_blank">lite om vår merch...</div></a>
+            <a href="kontakt.html">
+            <div id="item1" href="kontakt.html" target="_blank">våra medlemmar...</div></a>
             <div id="item1">vi är kockar...</div>
-            <div id="item1" href="kontakt.html">små kontakt</div>
+            <a href="kontakt.html">
+            <div id="item1" href="kontakt.html" target="_blank">små kontakt</div></a>
             <div id="item1">6</div>
             <div id="item1">7</div>
             <div id="item1">8</div>
@@ -33,5 +36,6 @@
         </main>
     <footer>
         <p>© 2025 </p>
+    </footer>
 </body>
 </html>
