--- a/merch.html
+++ b/merch.html
@@ -27,7 +27,7 @@
         <div id="item" onmouseover="showCursorText('produkt10')" onmouseleave="hideCursorText()" onmouseout="hideCursorText()" onmouseenter="showCursorText('produkt10')">produkt10</div>
         <div id="item" onmouseover="showCursorText('produkt11')" onmouseleave="hideCursorText()" onmouseout="hideCursorText()" onmouseenter="showCursorText('produkt11')">produkt11</div>
     </main>
-    <div class="cursor-text" id="cursorText">TEST</div>
+    <div class="cursor-text" id="cursorText"></div>
     <script>
         const cursorText = document.getElementById('cursorText');
 
