--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="item1" href="kontakt.html" target="_blank">våra medlemmar...</div></a>
             <div id="item1">vi är kockar...</div>
             <a href="kontakt.html">
-            <div id="item1" href="kontakt.html" target="_blank">små kontakt</div></a>
+            <div id="item1" href="kontakt.html" target="_blank">små kontakt...</div></a>
             <div id="item1">6</div>
             <div id="item1">7</div>
             <div id="item1">8</div>
